--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <main class="main">
         <article class="person">
         <img class="person__picture" src="avatar.png">
+       <div>
         <header class="person__info">
 <h1 class="person__name">Paulina Zając</h1>
 <p class="person__position">stanowisko</p>
         </header>
         <p class="person__description">
-            Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. 
+            Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, 
+            właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. 
+            Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. 
         </p>
-        <p class="person__description">
-W sieci: Facebook, GitHub, Instagram.
+        <p class="person__description person__description--with-margin">
+W sieci: <a class="person__link" href="#">Facebook</a>,<a class="person__link" href="#">GitHub</a>,<a class="person__link" href="#">Instagram</a>.
         </p>
+    </div>
     </article>
 
     </main>
