--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <main class="main">
         <article class="person">
-        <img class="person__picture" src="avatar.png">
+        <img class="person__picture" src="toja.jpg">
        <div>
         <header class="person__info">
 <h1 class="person__name">Paulina Zając</h1>
-<p class="person__position">stanowisko</p>
+<p class="person__position">Junior</p>
         </header>
         <p class="person__description">
             Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, 
